@@ -47,9 +47,10 @@ struct unit_data {
 
 struct view_data {
 	unsigned short
-	  	class_,
+		class_,
 		weapon,
 		shield, //Or left-hand weapon.
+		robe,
 		head_top,
 		head_mid,
 		head_bottom,
